feat: add settings

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,3 +52,13 @@ split-debuginfo = "off"
 
 [profile.release.package."*"]
 opt-level = "z"
+
+[profile.wasm-dev]
+inherits = "dev"
+opt-level = 1
+
+[profile.server-dev]
+inherits = "dev"
+
+[profile.android-dev]
+inherits = "dev"
