--- a/Dioxus.toml
+++ b/Dioxus.toml
@@ -22,3 +22,4 @@ long_description = "A powerful and lightweight Minecraft launcher that will be p
 [bundle.macos]
 app_name = "Dream Launcher"
 files = {}
+hardened_runtime = false
