--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,8 @@ tokio = { version = "1.47.1", features = [
 native-tls = "0.2.14"
 tokio-native-tls = "0.3.1"
 base64 = "0.22.1"
+webbrowser = "1.0.5"
+once_cell = "1.21.3"
 
 [features]
 default = ["desktop"]
