--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ tokio-native-tls = "0.3.1"
 base64 = "0.22.1"
 webbrowser = "1.0.5"
 once_cell = "1.21.3"
+autoupdater = "0.3.0"
 
 [features]
 default = ["desktop"]
