--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ repository = "https://github.com/FrogdreamStudios/launcher"
 keywords = ["minecraft", "launcher", "java", "gaming", "cross-platform"]
 categories = ["games"]
 license = "LGPL-3.0-only"
-version = "1.0.0-beta.1"
+version = "0.0.1"
 edition = "2024"
 
 [dependencies]
