--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -71,10 +71,57 @@ jobs:
           elif [[ "${{ runner.os }}" == "macOS" ]]; then
             chmod +x scripts/create_app_bundle.sh
             ./scripts/create_app_bundle.sh
+
+            echo "Removing all extended attributes and quarantine flags..."
+            find "target/release/Dream Launcher.app" -exec xattr -c {} \; 2>/dev/null || true
             find "target/release/Dream Launcher.app" -exec xattr -d com.apple.quarantine {} \; 2>/dev/null || true
-            codesign --force --deep --sign - "target/release/Dream Launcher.app"
-            create-dmg --volname "Dream Launcher" --window-pos 200 120 --window-size 800 400 --icon-size 100 --icon "Dream Launcher.app" 200 190 --hide-extension "Dream Launcher.app" --app-drop-link 600 185 "DreamLauncher-macOS.dmg" "target/release/Dream Launcher.app" 2>/dev/null || hdiutil create -volname "Dream Launcher" -srcfolder "target/release/Dream Launcher.app" -ov -format UDZO "DreamLauncher-macOS.dmg"
-            codesign --force --sign - "DreamLauncher-macOS.dmg"
+            find "target/release/Dream Launcher.app" -exec xattr -d com.apple.metadata:kMDItemWhereFroms {} \; 2>/dev/null || true
+            find "target/release/Dream Launcher.app" -exec xattr -d com.apple.metadata:_kMDItemUserTags {} \; 2>/dev/null || true
+
+            chmod -R 755 "target/release/Dream Launcher.app"
+            chmod +x "target/release/Dream Launcher.app/Contents/MacOS/DreamLauncher"
+
+            # Create entitlements file
+            cat > entitlements.plist << 'EOF'
+            <?xml version="1.0" encoding="UTF-8"?>
+            <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+            <plist version="1.0">
+            <dict>
+                <key>com.apple.security.cs.allow-jit</key>
+                <true/>
+                <key>com.apple.security.cs.allow-unsigned-executable-memory</key>
+                <true/>
+                <key>com.apple.security.cs.disable-library-validation</key>
+                <true/>
+            </dict>
+            </plist>
+            EOF
+
+            echo "Signing application..."
+            codesign --force --deep --sign - --entitlements entitlements.plist --options runtime "target/release/Dream Launcher.app" || true
+
+            echo "Creating DMG..."
+            create-dmg \
+              --volname "Dream Launcher" \
+              --window-pos 200 120 \
+              --window-size 800 400 \
+              --icon-size 100 \
+              --icon "Dream Launcher.app" 200 190 \
+              --hide-extension "Dream Launcher.app" \
+              --app-drop-link 600 185 \
+              --no-internet-enable \
+              "DreamLauncher-macOS.dmg" \
+              "target/release/Dream Launcher.app" 2>/dev/null || \
+            hdiutil create -volname "Dream Launcher" -srcfolder "target/release/Dream Launcher.app" -ov -format UDZO "DreamLauncher-macOS.dmg"
+
+            echo "Processing DMG file..."
+            xattr -c "DreamLauncher-macOS.dmg" 2>/dev/null || true
+            xattr -d com.apple.quarantine "DreamLauncher-macOS.dmg" 2>/dev/null || true
+            codesign --force --sign - "DreamLauncher-macOS.dmg" || true
+
+            spctl --add --label "DreamLauncher-CI" "target/release/Dream Launcher.app" 2>/dev/null || echo "Note: spctl add failed (that's okay)"
+
+            echo "macOS packaging completed"
           else
             cp target/release/DreamLauncher dist/
             zip -j DreamLauncher-linux.zip dist/DreamLauncher
