--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -64,6 +64,7 @@ jobs:
       - name: Package
         shell: bash
         run: |
+          set -e
           mkdir -p dist
           if [[ "${{ runner.os }}" == "Windows" ]]; then
             cp target/release/DreamLauncher.exe dist/
@@ -72,55 +73,59 @@ jobs:
             chmod +x scripts/create_app_bundle.sh
             ./scripts/create_app_bundle.sh
 
-            echo "Removing all extended attributes and quarantine flags..."
-            find "target/release/Dream Launcher.app" -exec xattr -c {} \; 2>/dev/null || true
-            find "target/release/Dream Launcher.app" -exec xattr -d com.apple.quarantine {} \; 2>/dev/null || true
-            find "target/release/Dream Launcher.app" -exec xattr -d com.apple.metadata:kMDItemWhereFroms {} \; 2>/dev/null || true
-            find "target/release/Dream Launcher.app" -exec xattr -d com.apple.metadata:_kMDItemUserTags {} \; 2>/dev/null || true
+            echo "Removing extended attributes and quarantine flags from app bundle..."
+            find "target/release/Dream Launcher.app" -type f -exec xattr -c {} \; 2>/dev/null || true
+            find "target/release/Dream Launcher.app" -type f -exec xattr -d com.apple.quarantine {} \; 2>/dev/null || true
 
             chmod -R 755 "target/release/Dream Launcher.app"
             chmod +x "target/release/Dream Launcher.app/Contents/MacOS/DreamLauncher"
 
             # Create entitlements file
-            echo '<?xml version="1.0" encoding="UTF-8"?>' > entitlements.plist
-            echo '<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">' >> entitlements.plist
-            echo '<plist version="1.0">' >> entitlements.plist
-            echo '<dict>' >> entitlements.plist
-            echo '    <key>com.apple.security.cs.allow-jit</key>' >> entitlements.plist
-            echo '    <true/>' >> entitlements.plist
-            echo '    <key>com.apple.security.cs.allow-unsigned-executable-memory</key>' >> entitlements.plist
-            echo '    <true/>' >> entitlements.plist
-            echo '    <key>com.apple.security.cs.disable-library-validation</key>' >> entitlements.plist
-            echo '    <true/>' >> entitlements.plist
-            echo '</dict>' >> entitlements.plist
-            echo '</plist>' >> entitlements.plist
+            cat <<EOF > entitlements.plist
+  <?xml version="1.0" encoding="UTF-8"?>
+  <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+  <plist version="1.0">
+  <dict>
+  <key>com.apple.security.cs.allow-jit</key>
+  <true/>
+  <key>com.apple.security.cs.allow-unsigned-executable-memory</key>
+  <true/>
+  <key>com.apple.security.cs.disable-library-validation</key>
+  <true/>
+  </dict>
+  </plist>
+  EOF
+  
+  echo "Signing application bundle..."
+  codesign --force --deep --sign - --entitlements entitlements.plist --options runtime "target/release/Dream Launcher.app" || echo "codesign failed, continuing..."
+  
+  echo "Creating DMG..."
+  if ! create-dmg --volname "Dream Launcher" --window-pos 200 120 --window-size 800 400 --icon-size 100 --icon "Dream Launcher.app" 200 190 --hide-extension "Dream Launcher.app" --app-drop-link 600 185 --no-internet-enable "DreamLauncher-macOS.dmg" "target/release/Dream Launcher.app" 2>/dev/null; then
+  echo "create-dmg failed, using hdiutil as fallback..."
+  hdiutil create -volname "Dream Launcher" -srcfolder "target/release/Dream Launcher.app" -ov -format UDZO "DreamLauncher-macOS.dmg"
+  fi
+  
+  echo "Processing DMG file..."
+  if [[ -f "DreamLauncher-macOS.dmg" ]]; then
+  xattr -c "DreamLauncher-macOS.dmg" 2>/dev/null || echo "xattr -c failed, continuing..."
+  xattr -d com.apple.quarantine "DreamLauncher-macOS.dmg" 2>/dev/null || echo "xattr -d failed, continuing..."
+  codesign --force --sign - "DreamLauncher-macOS.dmg" || echo "codesign DMG failed, continuing..."
+  else
+  echo "DMG file not found, skipping xattr/codesign for DMG"
+  fi
+  
+  spctl --add --label "DreamLauncher-CI" "target/release/Dream Launcher.app" 2>/dev/null || echo "spctl add failed (that's okay)"
+  
+  echo "macOS packaging completed"
+  else
+  cp target/release/DreamLauncher dist/
+  zip -j DreamLauncher-linux.zip dist/DreamLauncher
+  fi
 
-            echo "Signing application..."
-            codesign --force --deep --sign - --entitlements entitlements.plist --options runtime "target/release/Dream Launcher.app" || true
-
-            echo "Creating DMG..."
-            if ! create-dmg --volname "Dream Launcher" --window-pos 200 120 --window-size 800 400 --icon-size 100 --icon "Dream Launcher.app" 200 190 --hide-extension "Dream Launcher.app" --app-drop-link 600 185 --no-internet-enable "DreamLauncher-macOS.dmg" "target/release/Dream Launcher.app" 2>/dev/null; then
-              echo "create-dmg failed, using hdiutil as fallback..."
-              hdiutil create -volname "Dream Launcher" -srcfolder "target/release/Dream Launcher.app" -ov -format UDZO "DreamLauncher-macOS.dmg"
-            fi
-
-            echo "Processing DMG file..."
-            xattr -c "DreamLauncher-macOS.dmg" 2>/dev/null || true
-            xattr -d com.apple.quarantine "DreamLauncher-macOS.dmg" 2>/dev/null || true
-            codesign --force --sign - "DreamLauncher-macOS.dmg" || true
-
-            spctl --add --label "DreamLauncher-CI" "target/release/Dream Launcher.app" 2>/dev/null || echo "Note: spctl add failed (that's okay)"
-
-            echo "macOS packaging completed"
-          else
-            cp target/release/DreamLauncher dist/
-            zip -j DreamLauncher-linux.zip dist/DreamLauncher
-          fi
-
-      - name: Upload
-        uses: actions/upload-artifact@v4
-        with:
-          name: DreamLauncher-${{ runner.os }}
-          path: |
-            DreamLauncher-*.zip
-            DreamLauncher-*.dmg
+- name: Upload
+  uses: actions/upload-artifact@v4
+  with:
+    name: DreamLauncher-${{ runner.os }}
+    path: |
+      DreamLauncher-*.zip
+      DreamLauncher-*.dmg
