ci: fix macOS packaging script

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,5 +1,3 @@
-# Basic workflow for building Dream Launcher on Windows, Linux and macOS.
-
 name: Rust CI
 
 on: [push, pull_request]
@@ -79,53 +77,52 @@ jobs:
 
             chmod -R 755 "target/release/Dream Launcher.app"
             chmod +x "target/release/Dream Launcher.app/Contents/MacOS/DreamLauncher"
+            echo "Creating entitlements file..."
+            cat > entitlements.plist <<'EOF'
+            | <?xml version="1.0" encoding="UTF-8"?>
+            | <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+            | <plist version="1.0">
+            | <dict>
+            |   <key>com.apple.security.cs.allow-jit</key>
+            |   <true/>
+            |   <key>com.apple.security.cs.allow-unsigned-executable-memory</key>
+            |   <true/>
+            |   <key>com.apple.security.cs.disable-library-validation</key>
+            |   <true/>
+            | </dict>
+            | </plist>
+            EOF
+          
+            echo "Signing application bundle..."
+            codesign --force --deep --sign - --entitlements entitlements.plist --options runtime "target/release/Dream Launcher.app" || echo "codesign failed, continuing..."
+            
+            echo "Creating DMG..."
+            if ! create-dmg --volname "Dream Launcher" --window-pos 200 120 --window-size 800 400 --icon-size 100 --icon "Dream Launcher.app" 200 190 --hide-extension "Dream Launcher.app" --app-drop-link 600 185 --no-internet-enable "DreamLauncher-macOS.dmg" "target/release/Dream Launcher.app" 2>/dev/null; then
+              echo "create-dmg failed, using hdiutil as fallback..."
+              hdiutil create -volname "Dream Launcher" -srcfolder "target/release/Dream Launcher.app" -ov -format UDZO "DreamLauncher-macOS.dmg"
+            fi
+            
+            echo "Processing DMG file..."
+            if [[ -f "DreamLauncher-macOS.dmg" ]]; then
+              xattr -c "DreamLauncher-macOS.dmg" 2>/dev/null || echo "xattr -c failed, continuing..."
+              xattr -d com.apple.quarantine "DreamLauncher-macOS.dmg" 2>/dev/null || echo "xattr -d failed, continuing..."
+              codesign --force --sign - "DreamLauncher-macOS.dmg" || echo "codesign DMG failed, continuing..."
+            else
+              echo "DMG file not found, skipping xattr/codesign for DMG"
+            fi
+            
+            spctl --add --label "DreamLauncher-CI" "target/release/Dream Launcher.app" 2>/dev/null || echo "spctl add failed (that's okay)"
+            
+            echo "macOS packaging completed"
+          else
+            cp target/release/DreamLauncher dist/
+            zip -j DreamLauncher-linux.zip dist/DreamLauncher
+          fi
 
-            # Create entitlements file
-            cat <<EOF > entitlements.plist
-  <?xml version="1.0" encoding="UTF-8"?>
-  <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-  <plist version="1.0">
-  <dict>
-  <key>com.apple.security.cs.allow-jit</key>
-  <true/>
-  <key>com.apple.security.cs.allow-unsigned-executable-memory</key>
-  <true/>
-  <key>com.apple.security.cs.disable-library-validation</key>
-  <true/>
-  </dict>
-  </plist>
-  EOF
-  
-  echo "Signing application bundle..."
-  codesign --force --deep --sign - --entitlements entitlements.plist --options runtime "target/release/Dream Launcher.app" || echo "codesign failed, continuing..."
-  
-  echo "Creating DMG..."
-  if ! create-dmg --volname "Dream Launcher" --window-pos 200 120 --window-size 800 400 --icon-size 100 --icon "Dream Launcher.app" 200 190 --hide-extension "Dream Launcher.app" --app-drop-link 600 185 --no-internet-enable "DreamLauncher-macOS.dmg" "target/release/Dream Launcher.app" 2>/dev/null; then
-  echo "create-dmg failed, using hdiutil as fallback..."
-  hdiutil create -volname "Dream Launcher" -srcfolder "target/release/Dream Launcher.app" -ov -format UDZO "DreamLauncher-macOS.dmg"
-  fi
-  
-  echo "Processing DMG file..."
-  if [[ -f "DreamLauncher-macOS.dmg" ]]; then
-  xattr -c "DreamLauncher-macOS.dmg" 2>/dev/null || echo "xattr -c failed, continuing..."
-  xattr -d com.apple.quarantine "DreamLauncher-macOS.dmg" 2>/dev/null || echo "xattr -d failed, continuing..."
-  codesign --force --sign - "DreamLauncher-macOS.dmg" || echo "codesign DMG failed, continuing..."
-  else
-  echo "DMG file not found, skipping xattr/codesign for DMG"
-  fi
-  
-  spctl --add --label "DreamLauncher-CI" "target/release/Dream Launcher.app" 2>/dev/null || echo "spctl add failed (that's okay)"
-  
-  echo "macOS packaging completed"
-  else
-  cp target/release/DreamLauncher dist/
-  zip -j DreamLauncher-linux.zip dist/DreamLauncher
-  fi
-
-- name: Upload
-  uses: actions/upload-artifact@v4
-  with:
-    name: DreamLauncher-${{ runner.os }}
-    path: |
-      DreamLauncher-*.zip
-      DreamLauncher-*.dmg
+      - name: Upload
+        uses: actions/upload-artifact@v4
+        with:
+          name: DreamLauncher-${{ runner.os }}
+          path: |
+            DreamLauncher-*.zip
+            DreamLauncher-*.dmg
