--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -78,20 +78,19 @@ jobs:
             chmod -R 755 "target/release/Dream Launcher.app"
             chmod +x "target/release/Dream Launcher.app/Contents/MacOS/DreamLauncher"
             echo "Creating entitlements file..."
-            cat > entitlements.plist <<'EOF'
-            | <?xml version="1.0" encoding="UTF-8"?>
-            | <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-            | <plist version="1.0">
-            | <dict>
-            |   <key>com.apple.security.cs.allow-jit</key>
-            |   <true/>
-            |   <key>com.apple.security.cs.allow-unsigned-executable-memory</key>
-            |   <true/>
-            |   <key>com.apple.security.cs.disable-library-validation</key>
-            |   <true/>
-            | </dict>
-            | </plist>
-            EOF
+          
+            echo '<?xml version="1.0" encoding="UTF-8"?>' > entitlements.plist
+            echo '<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">' >> entitlements.plist
+            echo '<plist version="1.0">' >> entitlements.plist
+            echo '<dict>' >> entitlements.plist
+            echo '    <key>com.apple.security.cs.allow-jit</key>' >> entitlements.plist
+            echo '    <true/>' >> entitlements.plist
+            echo '    <key>com.apple.security.cs.allow-unsigned-executable-memory</key>' >> entitlements.plist
+            echo '    <true/>' >> entitlements.plist
+            echo '    <key>com.apple.security.cs.disable-library-validation</key>' >> entitlements.plist
+            echo '    <true/>' >> entitlements.plist
+            echo '</dict>' >> entitlements.plist
+            echo '</plist>' >> entitlements.plist
           
             echo "Signing application bundle..."
             codesign --force --deep --sign - --entitlements entitlements.plist --options runtime "target/release/Dream Launcher.app" || echo "codesign failed, continuing..."
