--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,5 +1,3 @@
-# Basic workflow for building Dream Launcher on Windows, Linux and macOS.
-
 name: Rust CI
 
 on: [push, pull_request]
@@ -57,24 +55,38 @@ jobs:
           elif [[ "${{ runner.os }}" == "Linux" ]]; then
             upx --best --lzma target/release/DreamLauncher
           elif [[ "${{ runner.os }}" == "macOS" ]]; then
-            chmod +x scripts/compress-macos.sh
-            ./scripts/compress-macos.sh target/release/DreamLauncher
+            chmod +x scripts/macos/compress.sh
+            ./scripts/macos/compress.sh target/release/DreamLauncher
           fi
 
       - name: Package
         shell: bash
         run: |
+          set -e
           mkdir -p dist
           if [[ "${{ runner.os }}" == "Windows" ]]; then
             cp target/release/DreamLauncher.exe dist/
             powershell -Command "Compress-Archive -Path dist/DreamLauncher.exe -DestinationPath DreamLauncher-Windows.zip"
           elif [[ "${{ runner.os }}" == "macOS" ]]; then
-            chmod +x scripts/create_app_bundle.sh
-            ./scripts/create_app_bundle.sh
-            find "target/release/Dream Launcher.app" -exec xattr -d com.apple.quarantine {} \; 2>/dev/null || true
-            codesign --force --deep --sign - "target/release/Dream Launcher.app"
-            create-dmg --volname "Dream Launcher" --window-pos 200 120 --window-size 800 400 --icon-size 100 --icon "Dream Launcher.app" 200 190 --hide-extension "Dream Launcher.app" --app-drop-link 600 185 "DreamLauncher-macOS.dmg" "target/release/Dream Launcher.app" 2>/dev/null || hdiutil create -volname "Dream Launcher" -srcfolder "target/release/Dream Launcher.app" -ov -format UDZO "DreamLauncher-macOS.dmg"
-            codesign --force --sign - "DreamLauncher-macOS.dmg"
+            chmod +x scripts/macos/bundle.sh
+            ./scripts/macos/bundle.sh
+
+            chmod +x scripts/macos/clean.sh
+            ./scripts/macos/clean.sh "target/release/Dream Launcher.app"
+
+            chmod +x scripts/macos/sign.sh
+            ./scripts/macos/sign.sh "target/release/Dream Launcher.app"
+
+            chmod +x scripts/macos/dmg.sh
+            ./scripts/macos/dmg.sh
+
+            if [[ -f "DreamLauncher-macOS.dmg" ]]; then
+              echo "DMG created successfully"
+            else
+              echo "No DMG file found"
+            fi
+
+            echo "macOS packaging completed"
           else
             cp target/release/DreamLauncher dist/
             zip -j DreamLauncher-linux.zip dist/DreamLauncher
