--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ repository = "https://github.com/FrogdreamStudios/launcher"
 keywords = ["minecraft", "launcher", "java", "gaming", "cross-platform"]
 categories = ["games"]
 license = "LGPL-3.0-only"
-version = "1.0.0-beta.1"
+version = "0.0.1"
 edition = "2024"
 
 [dependencies]
@@ -29,6 +29,12 @@ tokio-native-tls = "0.3.1"
 base64 = "0.22.1"
 webbrowser = "1.0.5"
 once_cell = "1.21.3"
+self_update = { version = "0.42.0", features = [
+    "archive-zip",
+    "archive-tar",
+    "compression-flate2",
+] }
+reqwest = { version = "0.12.23", features = ["json"] }
 
 [features]
 default = ["desktop"]
@@ -39,6 +45,9 @@ minimal = []
 [[bin]]
 name = "DreamLauncher"
 path = "src/main.rs"
+
+[build-dependencies]
+winres = "0.1.12"
 
 [profile.dev]
 incremental = true
