--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ self_update = { version = "0.42.0", features = [
     "compression-flate2",
 ] }
 reqwest = { version = "0.12.23", features = ["json"] }
+pyo3 = "0.26.0"
 
 [features]
 default = ["desktop"]
