--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,9 @@ self_update = { version = "0.42.0", features = [
     "compression-flate2",
 ] }
 reqwest = { version = "0.12.23", features = ["json"] }
-pyo3 = "0.26.0"
+anyhow = "1.0.99"
+log = "0.4.27"
+env_logger = "0.11.8"
 
 [features]
 default = ["desktop"]
