--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,8 @@ self_update = { version = "0.42.0", features = [
     "archive-tar",
     "compression-flate2",
 ] }
-reqwest = { version = "0.12.23", features = ["json"] }
+reqwest = { version = "0.12.23", features = ["json", "stream"] }
+futures-util = "0.3.31"
 anyhow = "1.0.99"
 log = "0.4.27"
 env_logger = "0.11.8"
