--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ futures-util = "0.3.31"
 anyhow = "1.0.99"
 log = "0.4.27"
 env_logger = "0.11.8"
+chrono = { version = "0.4", features = ["serde"] }
 
 [features]
 default = ["desktop"]
