--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -66,7 +66,7 @@ jobs:
           mkdir -p dist
           if [[ "${{ runner.os }}" == "Windows" ]]; then
             cp "target/release/DreamLauncher.exe" "dist/Dream Launcher.exe"
-            powershell -Command "Compress-Archive -Path "dist/Dream Launcher.exe" -DestinationPath "Dream Launcher-Windows.zip""
+            powershell -Command "Compress-Archive -Path 'dist/Dream Launcher.exe' -DestinationPath 'Dream Launcher-Windows.zip'"
           elif [[ "${{ runner.os }}" == "macOS" ]]; then
             chmod +x scripts/macos/bundle.sh
             ./scripts/macos/bundle.sh
