--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,24 +14,34 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-24.04, macos-14, windows-2025]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.13'
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r python/requirements.txt
+
       - name: Deps (Windows)
-        if: matrix.os == 'windows-2025'
+        if: matrix.os == 'windows-latest'
         run: choco install upx
 
       - name: Deps (Linux)
-        if: matrix.os == 'ubuntu-24.04'
+        if: matrix.os == 'ubuntu-latest'
         uses: awalsh128/cache-apt-pkgs-action@v1
         with:
           packages: libgtk-3-dev libglib2.0-dev libsoup-3.0-dev libssl-dev libjavascriptcoregtk-4.1-dev libwebkit2gtk-4.1-dev libxdo-dev pkg-config build-essential curl xdotool upx-ucl
           version: 1
 
       - name: Deps (macOS)
-        if: matrix.os == 'macos-14'
+        if: matrix.os == 'macos-latest'
         run: brew install create-dmg upx
 
       - name: Cache
