--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -9,12 +9,9 @@ env:
   RUST_BACKTRACE: 1
 
 jobs:
-  build:
-    name: Build
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+  build-windows:
+    name: Build Windows
+    runs-on: windows-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -30,18 +27,123 @@ jobs:
           pip install -r python/requirements.txt
 
       - name: Deps (Windows)
-        if: matrix.os == 'windows-latest'
         run: choco install upx
 
+      - name: Cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.rustup
+            ~/.cargo/bin
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: windows-allcache-${{ hashFiles('rust-toolchain.toml') }}-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: windows-allcache-
+
+      - name: Build
+        run: cargo build --release --locked --features "desktop"
+
+      - name: Compress with UPX (Windows)
+        run: |
+          upx --best --lzma target/release/DreamLauncher.exe
+
+      - name: Install NSIS (Windows)
+        run: |
+          choco install nsis -y
+
+      - name: Create Windows Installer
+        run: |
+          mkdir dist
+          powershell -ExecutionPolicy Bypass -File scripts/windows/build_installer.ps1 -Version "${{ github.ref_name || 'dev' }}"
+
+      - name: Upload Windows Installer
+        uses: actions/upload-artifact@v4
+        with:
+          name: DreamLauncher-Windows
+          path: |
+            dist/Dream Launcher Setup.exe
+
+  build-linux:
+    name: Build Linux
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.13'
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r python/requirements.txt
+
       - name: Deps (Linux)
-        if: matrix.os == 'ubuntu-latest'
         uses: awalsh128/cache-apt-pkgs-action@v1
         with:
           packages: libgtk-3-dev libglib2.0-dev libsoup-3.0-dev libssl-dev libjavascriptcoregtk-4.1-dev libwebkit2gtk-4.1-dev libxdo-dev pkg-config build-essential curl xdotool upx-ucl libfuse2
           version: 1
 
+      - name: Cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.rustup
+            ~/.cargo/bin
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: linux-allcache-${{ hashFiles('rust-toolchain.toml') }}-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: linux-allcache-
+
+      - name: Build
+        run: cargo build --release --locked --features "desktop"
+
+      - name: Compress with UPX (Linux)
+        run: |
+          upx --best --lzma target/release/DreamLauncher
+
+      - name: Install AppImage dependencies (Linux)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y file
+          wget https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage
+          chmod +x appimagetool-x86_64.AppImage
+          sudo mv appimagetool-x86_64.AppImage /usr/local/bin/appimagetool
+
+      - name: Create AppImage (Linux)
+        run: |
+          chmod +x scripts/linux/appimage.sh
+          ./scripts/linux/appimage.sh
+
+      - name: Upload Linux AppImage
+        uses: actions/upload-artifact@v4
+        with:
+          name: DreamLauncher-Linux-AppImage
+          path: |
+            *.AppImage
+
+  build-macos:
+    name: Build macOS
+    runs-on: macos-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.13'
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r python/requirements.txt
+
       - name: Deps (macOS)
-        if: matrix.os == 'macos-latest'
         run: brew install create-dmg upx
 
       - name: Cache
@@ -53,56 +155,18 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             target
-          key: ${{ runner.os }}-allcache-${{ hashFiles('rust-toolchain.toml') }}-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: ${{ runner.os }}-allcache-
+          key: macos-allcache-${{ hashFiles('rust-toolchain.toml') }}-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: macos-allcache-
 
       - name: Build
         run: cargo build --release --locked --features "desktop"
 
-      - name: Compress with UPX (Linux)
-        if: matrix.os == 'ubuntu-latest'
-        run: |
-          upx --best --lzma target/release/DreamLauncher
-
-      - name: Compress with UPX (Windows)
-        if: matrix.os == 'windows-latest'
-        run: |
-          upx --best --lzma target/release/DreamLauncher.exe
-
       - name: Compress with UPX (macOS)
-        if: matrix.os == 'macos-latest'
         run: |
           chmod +x scripts/macos/compress.sh
           ./scripts/macos/compress.sh "target/release/DreamLauncher"
 
-      - name: Install NSIS (Windows)
-        if: matrix.os == 'windows-latest'
-        run: |
-          choco install nsis -y
-
-      - name: Create Windows Installer
-        if: matrix.os == 'windows-latest'
-        run: |
-          mkdir dist
-          powershell -ExecutionPolicy Bypass -File scripts/windows/build_installer.ps1 -Version "${{ github.ref_name || 'dev' }}"
-
-      - name: Install AppImage dependencies (Linux)
-        if: matrix.os == 'ubuntu-latest'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y file
-          wget https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage
-          chmod +x appimagetool-x86_64.AppImage
-          sudo mv appimagetool-x86_64.AppImage /usr/local/bin/appimagetool
-
-      - name: Create AppImage (Linux)
-        if: matrix.os == 'ubuntu-latest'
-        run: |
-          chmod +x scripts/linux/appimage.sh
-          ./scripts/linux/appimage.sh
-
       - name: Package for macOS
-        if: matrix.os == 'macos-latest'
         shell: bash
         run: |
           set -e
@@ -128,24 +192,7 @@ jobs:
 
           echo "macOS packaging completed"
 
-      - name: Upload Windows Installer
-        if: matrix.os == 'windows-latest'
-        uses: actions/upload-artifact@v4
-        with:
-          name: DreamLauncher-Windows
-          path: |
-            dist/Dream Launcher Setup.exe
-
-      - name: Upload Linux AppImage
-        if: matrix.os == 'ubuntu-latest'
-        uses: actions/upload-artifact@v4
-        with:
-          name: DreamLauncher-Linux-AppImage
-          path: |
-            *.AppImage
-
       - name: Upload macOS
-        if: matrix.os == 'macos-latest'
         uses: actions/upload-artifact@v4
         with:
           name: DreamLauncher-macOS
